# serializer version: 1
# name: TestCreate.test_duplicate[json]
  dict({
    'id': 'bad_request',
    'message': 'Group already exists',
  })
# ---
# name: TestCreate.test_ok[json]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestUpdate.test
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Technicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    }),
    'users': list([
      dict({
        'handle': 'fcarpenter',
        'id': '7cf872dc',
      }),
      dict({
        'handle': 'chelsea34',
        'id': '3cbb22cc',
      }),
      dict({
        'handle': 'michelle34',
        'id': 'da42dca3',
      }),
    ]),
  })
# ---
# name: TestUpdate.test_not_found[json]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_find
  list([
    dict({
      'id': 1,
      'legacy_id': None,
      'name': 'musicians',
    }),
    dict({
      'id': 2,
      'legacy_id': None,
      'name': 'hydrogeologists',
    }),
  ])
# ---
# name: test_get[200]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
      dict({
        'handle': 'qtaylor',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: test_get[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
